# tape-and-sort

./: CMakeLists.txt  README.MD
src/: main.cpp
src/config_reader/: config_read.cpp  config_read.h
src/sort/: sort_tape.cpp  sort_tape.h
src/tape/: delay_tape.h  file_tape.cpp  file_tape.h  in_memory_tape.cpp  in_memory_tape.h  tape_base.h
test/: test.cpp
